# hellOGL

./: .gitmodules  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: fragment.glsl  hellogl.cpp  model.cpp  model.h  vertex.glsl
